syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "Grpc_JSON";
//option csharp_namespace = "Grpc_JSON";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
	option (google.api.http) = {
		get: "/v1/greeter/{name}"
	};
  }

  rpc StreamingJson (stream JsonDataRequest) returns (stream JsonDataReply) {};
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message JsonDataRequest{
	string msg = 1;
}

message JsonDataReply{
	string msg = 1;
}

message TargetData{
	string id = 1;
	int32 count = 2;
}
